create, new, show actions added to players controller

--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add New Player</h1>
 
-<%= form_with scope: :player, local: true do |form| %>
+<%= form_with scope: :player, url: players_path, local: true do |form| %>
     <%= form.label :name %><br>
     <%= form.text_field :name%><br><br>
     <%= form.label :school %><br>
