--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,6 +1,22 @@
-<h1>Add New Player</h1>
+<h1>Edit Player</h1>
+ 
+<%= form_with(model: @player, local: true) do |form| %>
+ 
+  <% if @player.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@player.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @player.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+ 
 
-<%= form_with scope: :player, url: players_path, local: true do |form| %>
     <%= form.label :name %><br>
     <%= form.text_field :name%><br><br>
     <%= form.label :school %><br>
@@ -26,3 +42,5 @@
 
     <%= form.submit %>
 <% end %>
+ 
+<%= link_to 'Back', players_path %>
